# whytcard

./: .gitignore  README.md
addons/: README.md
addons/chrome/: README.md  background.js  content.css  content.js  i18n.js  manifest.json  options.html  options.js  package.json  playwright.config.ts  popup.html  popup.js  sidepanel.html  sidepanel.js  storage.js  tsconfig.json
addons/chrome/.github/: CONTRIBUTING.md  SECURITY.md  copilot-instructions.md
addons/chrome/.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
addons/chrome/.github/workflows/: ci.yml  codeql.yml  release.yml
addons/chrome/tests/: global-setup.ts  global-teardown.ts
addons/chrome/tests/fixtures/: extension-base.ts
addons/chrome/tests/specs/: hub-connection.spec.ts  i18n.spec.ts  options.spec.ts  popup.spec.ts  sidepanel.spec.ts
addons/ears/: .gitkeep  README.md  README.txt  __main__.py  config.yaml  pyproject.toml  requirements.txt
addons/ears/src/: __init__.py  cli.py  config.py  engine.py  formatters.py  server.py
addons/ears/tests/: test_transcript.py
addons/voice/: .gitignore  .gitkeep  LICENSE  README.md  README.txt  requirements.txt
addons/voice/config/: default.yaml
addons/voice/scripts/: chat_vincent.py  generate_persona.py  separate_vincent.py  test_vincent.py
addons/voice/src/: __init__.py
addons/voice/src/audio/: __init__.py  converter.py  downloader.py  separator.py
addons/voice/src/avatar/: __init__.py  avatar.py  prompt_generator.py
addons/voice/src/documentation/: __init__.py  generator.py
addons/voice/src/pipeline/: __init__.py  cli.py  orchestrator.py
addons/voice/src/research/: __init__.py  extractor.py  searcher.py
addons/voice/src/voice/: __init__.py  cloner.py
addons/vscode/: .eslintrc.json  .gitignore  .vscodeignore  README.md  package.json  tsconfig.json  webpack.config.js
addons/vscode/.github/: CONTRIBUTING.md  SECURITY.md  copilot-instructions.md  dependabot.yml
addons/vscode/.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
addons/vscode/.github/workflows/: ci.yml  codeql.yml  release.yml
addons/vscode/src/: extension.ts
addons/vscode/src/core/: projectAnalyzer.ts
addons/vscode/src/i18n/: index.ts  locales.ts
addons/vscode/src/services/: apiService.ts  hubService.ts  index.ts  mcpService.ts  secretsService.ts
addons/vscode/src/sidebar/: SidebarProvider.ts
addons/vscode/src/test/: runTest.ts
addons/vscode/src/test/suite/: commands.test.ts  extension.test.ts  hub.test.ts  i18n.test.ts  index.ts
addons/web/: README.md
core/: README.md
core/database/: Cargo.toml  README.md
core/database/migrations/: 20251203000001_initial_schema.sql  20251203000002_messages.sql  20251203000003_folders.sql  20251203000004_library_files.sql
core/database/src/: config.rs  database.rs  documents.rs  error.rs  graph.rs  lib.rs  schema.rs  vectors.rs
core/intelligence/: Cargo.toml  README.md  README.txt
core/intelligence/src/: config.rs  error.rs  lib.rs  main.rs  paths.rs  server.rs  session.rs
core/intelligence/src/cortex/: context.rs  engine.rs  executor.rs  instructions.rs  learner.rs  mod.rs  perceiver.rs
core/intelligence/src/integrations/: context7.rs  mod.rs  mslearn.rs  tavily.rs
core/intelligence/src/mcp_client/: config.rs  manager.rs  mod.rs  sequential_thinking.rs  types.rs
core/intelligence/src/memory/: episodic.rs  mod.rs  procedural.rs  semantic.rs
core/intelligence/src/tools/: cortex.rs  external.rs  knowledge.rs  memory.rs  mod.rs
core/intelligence/src/tools/pipelines/: analyze.rs  code.rs  document.rs  manage.rs  mod.rs  prepare.rs  verify.rs
core/intelligence/tests/: cortex_tests.rs  external_tests.rs  knowledge_tests.rs  management_tests.rs  memory_tests.rs  stress_tests.rs  workflow_integration_tests.rs
core/intelligence/tests/common/: mod.rs
core/llm/: Cargo.toml  README.md
core/llm/src/: config.rs  engine.rs  error.rs  lib.rs  model.rs  sampling.rs  session.rs  streaming.rs
core/mcp/: .gitignore  README.md  package.json
core/rag/: Cargo.toml  README.md
core/rag/src/: chunker.rs  config.rs  embedder.rs  engine.rs  error.rs  lib.rs  store.rs  types.rs
mcp/: package.json
