[package]
description = "RAG (Retrieval-Augmented Generation) module for WhytCard"
edition = "2021"
license = "GPL-3.0"
name = "whytcard-rag"
version = "0.1.0"

[dependencies]
# Database (SurrealDB via whytcard-database)
whytcard-database = { path = "../database" }

# Embeddings
fastembed = "5"

# Async runtime
futures = "0.3"
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
nanoid = "0.4"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
